tests/dataset/tpc-ds/compiler/c/q8.error
/tmp/q8.c: In function ‘test_TPCDS_Q8_result’:
/tmp/q8.c:244:46: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  244 |   if (test_TPCDS_Q8_result_result.len != tmp1.len) {
      |                                              ^
      |                                              ->
/tmp/q8.c:248:55: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  248 |       if (test_TPCDS_Q8_result_result.data[i3] != tmp1.data[i3]) {
      |                                                       ^
      |                                                       ->
/tmp/q8.c: In function ‘main’:
/tmp/q8.c:278:3: warning: implicit declaration of function ‘reverse’ [-Wimplicit-function-declaration]
  278 |   reverse(substr("zip", 0, 2));
      |   ^~~~~~~
/tmp/q8.c:278:11: warning: implicit declaration of function ‘substr’; did you mean ‘strstr’? [-Wimplicit-function-declaration]
  278 |   reverse(substr("zip", 0, 2));
      |           ^~~~~~
      |           strstr
/tmp/q8.c:281:7: error: conflicting types for ‘zip_list’; have ‘int’
  281 |   int zip_list = zip_list;
      |       ^~~~~~~~
/tmp/q8.c:279:15: note: previous definition of ‘zip_list’ with type ‘list_string’
  279 |   list_string zip_list = list_string_create(1);
      |               ^~~~~~~~
/tmp/q8.c:291:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  291 |     _json_string(it.s_store_name);
      |                  ~~^~~~~~~~~~~~~
/tmp/q8.c:65:32: note: expected ‘char *’ but argument is of type ‘const char *’
   65 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/q8.c:299:33: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  299 |   test_TPCDS_Q8_result_result = result;
      |                                 ^~~~~~
